Fix text legibility.

--- a/.vuepress/theme/styles/base/typography.css
+++ b/.vuepress/theme/styles/base/typography.css
@@ -22,9 +22,13 @@ html {
   font-size: var(--font-size);
 }
 
-body {
+.font-smoothing {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+.text-legible {
+  text-rendering: optimizeLegibility;
 }
 
 h1, h2, h3, h4, h5, h6 {
